--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
                     </div>
                     <div class="paises">
                         <div class="cinqueterre">
-                            <img src="imagens/cinqueterre.jpg" alt="">
+                            <img src="./img/cinqueterre.jpg" alt="">
                         </div>
                         <div class="diversos">
-                            <img src="imagens/newyork.jpg" alt="" title="new york">
-                            <img src="imagens/sanfran.jpg" class="direita" alt="" title="sanfran">
-                            <img src="imagens/pisa.jpg" class="baixo" alt="" title="pisa"> 
-                            <img src="imagens/paris.jpg" class="baixo direita"  alt="" title="paris">
+                            <img src="./img/newyork.jpg" alt="" title="new york">
+                            <img src="./img/sanfran.jpg" class="direita" alt="" title="sanfran">
+                            <img src="./img/pisa.jpg" class="baixo" alt="" title="pisa"> 
+                            <img src="./img/paris.jpg" class="baixo direita"  alt="" title="paris">
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="infos">
                     <div class="infos-container">
-                            <img src="./imagens/ocean.jpg" alt="">
+                            <img src="./img/ocean.jpg" alt="">
                         <div>
                             <h2>West Coast, Norway</h2>
                             <p class="opacity">Roundtrip from $79</p>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="infos-container" id="austria">    
-                        <img src="./imagens/mountains.jpg" alt="">
+                        <img src="./img/mountains.jpg" alt="">
                         <div>
                             <h2>Mountains, Austria</h2>
                             <p class="opacity">One-way from $39</p>
