adicionei um comando js

--- a/index.html
+++ b/index.html
@@ -212,5 +212,9 @@
         <p id="by">Powered By Isaque</p>
     </footer>
         
+    <script>
+        alert('Para melhor experiência, ative a rotação de tela e deite seu celular')
+        alert('Caso esteja por um computador ou laptop, vá em "especionar" e diminua sua tela até a resolução 768px')
+    </script>
 </body>
 </html>
